# kinyalm

./: .gitignore  .gitmodules  README.md  TASKS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: hf-access-help.md  hf-data-contribution.md  sft-row-review.md
apps/kinyalm-chat/: app.js  index.html  styles.css
configs/: README.md
configs/evaluation/: gemma4_bakeoff.json  kinyarwanda_benchmarks.json
configs/training/: track2-baseline-prompts.txt
data/: README.md
data/manifests/: README.md  dataset-manifest.template.json  hf-datalake-sft-drafts-2026-07-13-batch-001.json  sft-drafts-2026-07-13-batch-001-review-package.json  (+6 more)
docs/: assignment1-start.md  concepts.md  roadmap.md  session-log.md
scripts/: baseline_probe.py  check_project.py  compare_tokenizers.py  convert_distillation_review_to_sft.py  create_data_manifest.py  generate_sft_draft_batch.py  package_sft_draft_batch.py  prepare_hf_sft_baseline.py  prepare_local_mlx.py  probe_local_model.py  promote_reviewed_sft.py  publish_bakeoff_run.py  publish_training_run.py  review_hf_sources.py  run_multilingual_bakeoff.py  run_track_a_sandbox.py  stage_hf_contribution.py  status.sh  summarize_bakeoff_run.py  train_qlora.py  upload_hf_datalake.py  validate_sft_jsonl.py
tests/: README.md  test_bakeoff.py  test_benchmark_manifest.py  test_chat_gemma4_12b.py  test_chat_kakugo.py  test_data_manifest.py  test_demo_chat.py  test_demo_frontend.py  test_demo_server.py  test_hf_baseline.py  test_mlx_server.py  test_mlx_streaming.py  test_prepare_local_mlx.py  test_promote_reviewed_sft.py  test_publish_bakeoff_run.py  test_publish_training_run.py  test_run_multilingual_bakeoff.py  test_sft_draft_generation.py  test_sft_validation.py  test_summarize_bakeoff_run.py  test_task_bank.py  test_tokenizer_metrics.py  test_track_a_sandbox.py  test_train_qlora.py  test_upload_hf_datalake.py
(+99 files in other folders)
