[project]
name = "kinyalm"
version = "0.1.0"
description = "Kinyarwanda language-modeling and tutor MVP project"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "datasets>=3.0.0",
  "matplotlib>=3.9.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pytest>=8.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0",
  "torch>=2.5.0",
  "tqdm>=4.66.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kinyalm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
